# openchat-mlx-server

./: .gitignore  API.md  ARCHITECTURE.md  AUTO_THINKING_ENABLED.md  LICENSE  Makefile  QUICKSTART.md  QUICK_REFACTOR.md  QWEN3_TOKEN_SUPPORT.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  TAURI_INTEGRATION.md  THINKING_IMPLEMENTATION.md  build.py  config.example.json  pyproject.toml  pytest.ini  requirements.txt  run_server.sh  runtime_hook.py  verify_setup.py
examples/: client.py  openai_client_example.py  test_auto_thinking.py  test_qwen3_tokens.py  test_thinking_simple.py  thinking_demo.py
examples/vercel-ai/: local-openai-reasoning.ts  local-openai-tools.ts  local-openai.ts  openai.md  package.json  pnpm-lock.yaml  tool-calling.md  tsconfig.json
src/openchat_mlx_server/: __init__.py  __main__.py  api_models.py  config.py  generation.py  main.py  model_manager.py  qwen3_tokens.py  server.py  thinking.py  thinking_manager.py  utils.py
src/openchat_mlx_server/mlx_lm/: server.py
tests/: __init__.py  test_api.py  test_generation.py  test_model_manager.py  test_openai_compatibility.py  test_thinking_integration.py
